# aurmr_policy_models

./: README.md  pyproject.toml
conf/: config.yaml
conf/agent/: grid_world_expert_agent.yaml  learned_agent.yaml  point_mass_expert_agent.yaml  random_agent.yaml
conf/dataset/: h5_seq_dataset.yaml
conf/env/: defaults.yaml  grid_world_env.yaml  point_mass_env.yaml
conf/experiment/: grid_world_defaults.yaml  grid_world_expert_agent.yaml  grid_world_mlp_agent.yaml  grid_world_mlp_pretrain.yaml  grid_world_random_agent.yaml  point_mass.yaml  point_mass_diffusion.yaml  point_mass_diffusion_dql.yaml  point_mass_diffusion_ppo.yaml  point_mass_diffusion_pretrain.yaml  point_mass_expert_agent.yaml  point_mass_mlp_agent.yaml  point_mass_mlp_pretrain.yaml
conf/model/: basic_mlp.yaml  diffusion.yaml  diffusion_dql.yaml
conf/trainer/: base_trainer.yaml  bc_trainer.yaml  dql_trainer.yaml  ppo_trainer.yaml
src/aurmr_policy_models/agents/: base_agent.py  learned_agent.py  random_agent.py
src/aurmr_policy_models/agents/grid_world/: grid_world_expert_agent.py  (+1 more)
src/aurmr_policy_models/data/: collator.py  dataset.py  h5_seq_dataset.py
src/aurmr_policy_models/envs/: grid_world_env.py  point_mass_env.py
src/aurmr_policy_models/models/: __init__.py  basic_mlp.py  rnn.py
src/aurmr_policy_models/scripts/: collect_agent_data.py  evaluate_agent.py  test.py  train_model.py
src/aurmr_policy_models/trainers/: base_trainer.py  bc_trainer.py  idql_trainer.py  ppo_trainer.py  rlpd_trainer.py
src/aurmr_policy_models/utils/: config_utils.py  runtime_utils.py
(+17 files in other folders)
